fix homepage image cut off

--- a/public/output.css
+++ b/public/output.css
@@ -1071,6 +1071,10 @@ video {
   background-size: cover;
 }
 
+.bg-contain {
+  background-size: contain;
+}
+
 .bg-fixed {
   background-attachment: fixed;
 }
